added About Skills

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,29 +1,120 @@
+.brand{
+  color:antiquewhite;
+}
+
+.navbar-brand:hover,
+.navbar-brand:focus
+ {
+  color: rgb(230, 137, 16) !important;
+  border: 1px solid rgba(255, 250, 243, 1);
+  border-radius: 10px;
+}
+
+.navbar {
+  left: 0; right: 0;
+  position: fixed;
+  transition: all 0.3s ease-out 0s !important;
+  padding: 0.3rem 2rem !important;
+  font-size: 1.2rem !important;
+}
+
 .navbar-nav .nav-item {
-    position: relative;
-    margin-left: 20px;
-  }
-  
-  .navbar-nav .nav-item a {
-    font-weight: 400;
-    transition: all 0.3s ease-out 0s;
-    position: relative;
-    z-index: 1;
-  }
-  
-  .navbar-nav .nav-item a::after {
-    content: "";
-    position: relative;
-    display: block;
-    height: 5px;
-    width: 0;
-    border-radius: 16px;
-    background: #62c9e2;
-    bottom: 1px;
-    left: 0;
-    z-index: -1;
-    transition: all 0.3s ease-out 0s;
-  }
-  
-  .navbar-nav .nav-item a:hover::after {
-    width: 100%;
-  }
+  position: relative;
+  margin-left: 20px;
+}
+
+.navbar-nav .nav-item a {
+  font-weight: 400;
+  transition: all 0.3s ease-out 0s;
+  position: relative;
+  z-index: 1;
+  color: antiquewhite;
+}
+
+.navbar-nav .nav-item .nav-link::after {
+  content: "";
+  position: relative;
+  display: block;
+  height: 2px;
+  width: 0;
+  border-radius: 16px;
+  background: rgb(230, 137, 16);
+  bottom: 1px;
+  left: 0;
+  z-index: -1;
+  transition: all 0.3s ease-out 0s;
+}
+
+.navbar-nav .nav-item .a:hover::after {
+  width: 100%;
+}
+.navbar-nav .nav-item .nav-link.active::after {
+  width: 100%;
+}
+
+.navbar-nav .nav-item .nav-link.active {
+  color: rgb(230, 137, 16);
+}
+
+.navbar-toggler {
+  position: relative !important;
+  background-color: transparent !important;
+  border-color: transparent !important;
+}
+
+.navbar-toggler span {
+  display: block !important;
+  background-color: rgb(230, 137, 16) !important;
+  height: 2px !important;
+  width: 27px !important;
+  margin-top: 5px !important;
+  margin-bottom: 5px !important;
+  transform: rotate(0deg) !important;
+  left: 0 !important;
+  opacity: 1 !important;
+}
+
+.navbar-toggler:focus,
+.navbar-toggler:active {
+  outline: 0 !important;
+}
+
+.navbar-toggler span:nth-child(1),
+.navbar-toggler span:nth-child(3) {
+  transition: transform 0.35s ease-in-out !important;
+  transition: transform 0.35s ease-in-out !important;
+}
+
+.navbar-toggler:not(.collapsed) span:nth-child(1) {
+  position: absolute !important;
+  left: 12px !important;
+  top: 10px !important;
+  transform: rotate(135deg) !important;
+  opacity: 0.9 !important;
+}
+
+.navbar-toggler:not(.collapsed) span:nth-child(2) {
+  height: 12px !important;
+  visibility: hidden !important;
+  background-color: transparent !important;
+}
+
+.navbar-toggler:not(.collapsed) span:nth-child(3) {
+  position: absolute !important;
+  left: 12px !important;
+  top: 10px !important;
+  transform: rotate(-135deg) !important;
+  opacity: 0.9 !important;
+}
+
+.sticky{
+  background-color: transparent;
+  backdrop-filter: blur(10px) !important;
+  box-shadow: 0px 10px 10px 0px rgba(29, 32, 70, 0.371) !important;
+  transition: all 0.3s ease-out 0s !important;
+}
+
+.blured{
+  background-color: rgba(9, 11, 24, 1);
+  box-shadow: 0px 10px 10px 0px rgba(210, 211, 221, 0.071);
+}
