--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,43 +1,59 @@
 .footer {
+  position: static;
+  bottom: 0;
   background-color: #000;
-  padding: 10px 0 8px;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
-.footer-copywright {
-  text-align: center !important;
+@media (max-width: 768) {
+  .footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    z-index: 1000;
+  }
+  .content {
+    padding-bottom: 30px;
+  }
 }
 
-.footer-body {
-  z-index: 1;
-  text-align: center !important;
-}
+  .footer-copywright {
+    text-align: center !important;
+  }
+
+  .footer-body {
+    z-index: 1;
+    text-align: center !important;
+    justify-content: center;
+  }
 
 
-.footer h3 {
-  font-size: 1em;
-  color: white !important;
-  margin-top: 0.5em !important;
-  margin-bottom: 0.5em !important;
-}
+  .footer h3 {
+    font-size: 1em;
+    color: white !important;
+    margin-top: 0.5em !important;
+    margin-bottom: 0.5em !important;
+  }
 
-.footer-icons {
-  list-style: none;
-  margin-top: 0.5em !important;
-  margin-bottom: 0.5em !important;
-  margin-right: 2.5em;
-  padding-left: 2.5em;
-  padding: 0 !important;
-  justify-content: center;
-}
+  .footer-icons {
+    list-style: none;
+    margin-top: 0.5em !important;
+    margin-bottom: 0.5em !important;
+    margin-right: 2.5em;
+    margin-left: 2.5em;
+    padding: 0 !important;
+    justify-content: center;
+  }
 
-.social-icons {
-  display: inline-block !important;
-  padding-right: 15px;
-  padding-left: 15px;
-}
+  .social-icons {
+    display: inline-block !important;
+    padding-right: 15px;
+    padding-left: 15px;
+  }
 
-.mail-button {
-  cursor: pointer;
-  border: none;
-  color: white;
-}
+  .mail-button {
+    cursor: pointer;
+    border: none;
+    color: white;
+  }
