--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -153,3 +153,18 @@
     margin-bottom: 30px;
     z-index: 10000;
 }
+
+.button-down {
+    position: absolute;
+    bottom: 0;
+    margin-bottom: 10px;
+    z-index: 10000;
+}
+
+.button-up {
+    position: absolute;
+    bottom: 0;
+    margin-left: 20%;
+    margin-bottom: 10px;
+    z-index: 10000;
+}
